# Athena

./: .clang-format  README.md  meson.build  wasm.cross
docs/: athena.1
include/: bit.h  eval.h  move.h  movegen.h  pos.h  rng.h  search.h  str.h  tt.h  uci.h
src/: bit.c  eval.c  main.c  meson.build  move.c  movegen.c  pos.c  rng.c  search.c  str.c  tt.c  uci.c
